# llamaindex-demo

./: .env  .gitignore  README.md  env-example  pyproject.toml
src/llama-index-workflow-phoenix/: __init__.py  llm.py  run.py  workflow.py
tests/: __init__.py
